Implement start tour and restart

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       <div class="buttons">
         <button class="start">Start Tour</button>
         <button class="pause">Pause</button>
-        <button>Place knight randomly</button>
-        <button>Clear</button>
+        <button class="random">Place knight randomly</button>
+        <button class="restart">Restart</button>
       </div>
 
       <div class="delay-wrapper">
@@ -35,84 +35,84 @@
     </div>
     <div class="board">
       <div class="board-row">
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
+        <div class="square" pos="00"></div>
+        <div class="square black" pos="01"></div>
+        <div class="square" pos="02"></div>
+        <div class="square black" pos="03"></div>
+        <div class="square" pos="04"></div>
+        <div class="square black" pos="05"></div>
+        <div class="square" pos="06"></div>
+        <div class="square black" pos="07"></div>
       </div>
       <div class="board-row">
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
+        <div class="square black" pos="10"></div>
+        <div class="square" pos="11"></div>
+        <div class="square black" pos="12"></div>
+        <div class="square" pos="13"></div>
+        <div class="square black" pos="14"></div>
+        <div class="square" pos="15"></div>
+        <div class="square black" pos="16"></div>
+        <div class="square" pos="17"></div>
       </div>
       <div class="board-row">
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
+        <div class="square" pos="20"></div>
+        <div class="square black" pos="21"></div>
+        <div class="square" pos="22"></div>
+        <div class="square black" pos="23"></div>
+        <div class="square" pos="24"></div>
+        <div class="square black" pos="25"></div>
+        <div class="square" pos="26"></div>
+        <div class="square black" pos="27"></div>
       </div>
       <div class="board-row">
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
+        <div class="square black" pos="30"></div>
+        <div class="square" pos="31"></div>
+        <div class="square black" pos="32"></div>
+        <div class="square" pos="33"></div>
+        <div class="square black" pos="34"></div>
+        <div class="square" pos="35"></div>
+        <div class="square black" pos="36"></div>
+        <div class="square" pos="37"></div>
       </div>
       <div class="board-row">
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
+        <div class="square" pos="40"></div>
+        <div class="square black" pos="41"></div>
+        <div class="square" pos="42"></div>
+        <div class="square black" pos="43"></div>
+        <div class="square" pos="44"></div>
+        <div class="square black" pos="45"></div>
+        <div class="square" pos="46"></div>
+        <div class="square black" pos="47"></div>
       </div>
       <div class="board-row">
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
+        <div class="square black" pos="50"></div>
+        <div class="square" pos="51"></div>
+        <div class="square black" pos="52"></div>
+        <div class="square" pos="53"></div>
+        <div class="square black" pos="54"></div>
+        <div class="square" pos="55"></div>
+        <div class="square black" pos="56"></div>
+        <div class="square" pos="57"></div>
       </div>
       <div class="board-row">
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
+        <div class="square" pos="60"></div>
+        <div class="square black" pos="61"></div>
+        <div class="square" pos="62"></div>
+        <div class="square black" pos="63"></div>
+        <div class="square" pos="64"></div>
+        <div class="square black" pos="65"></div>
+        <div class="square" pos="66"></div>
+        <div class="square black" pos="67"></div>
       </div>
       <div class="board-row">
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
-        <div class="square black"></div>
-        <div class="square"></div>
+        <div class="square black" pos="70"></div>
+        <div class="square" pos="71"></div>
+        <div class="square black" pos="72"></div>
+        <div class="square" pos="73"></div>
+        <div class="square black" pos="74"></div>
+        <div class="square" pos="75"></div>
+        <div class="square black" pos="76"></div>
+        <div class="square" pos="77"></div>
       </div>
     </div>
   </body>
