--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,23 @@
     <div class="user">
       <h1 class="title">Knight's Tour</h1>
       <h2>Click on a square on the board to place a knight!</h2>
-      <div class="buttons">
-        <button class="start">Start Tour</button>
-        <button class="pause">Pause</button>
-        <button class="random">Place knight randomly</button>
-        <button class="restart">Restart</button>
-      </div>
-
       <div class="delay-wrapper">
         <label for="delay"
           >Set delay for the knight's movement in seconds</label
         >
         <input type="number" class="delay" id="delay" min="0" value="0" />
       </div>
-      <div class="navigate-buttons">
-        <button class="previous">Previous</button>
-        <button class="next">Next</button>
+      <div class="button-wrapper">
+        <button class="start">Start Tour</button>
+      </div>
+      <div class="buttons">
+        <button class="pause">Pause Tour</button>
+        <button class="restart">Restart Tour</button>
+        <button class="previous">Previous Move</button>
+        <button class="next">Next Move</button>
+      </div>
+      <div class="button-wrapper">
+        <button class="random">Place knight randomly</button>
       </div>
     </div>
     <div class="board">
