Add mute and unmute button

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
         <button class="previous">Previous Move</button>
         <button class="next">Next Move</button>
       </div>
+      <div class="volume"></div>
     </div>
     <div class="board">
       <div class="board-row">
