--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,17 @@
       <h2>Click on a square on the board to place a knight!</h2>
       <div class="delay-wrapper">
         <label for="delay"
-          >Set delay for the knight's movement in seconds</label
+          >Set delay for the knight's movement in milliseconds</label
         >
-        <input type="number" class="delay" id="delay" min="0" value="0" />
+        <input
+          type="number"
+          class="delay"
+          id="delay"
+          min="0"
+          value="0"
+          max="1000"
+          step="100"
+        />
       </div>
       <div class="buttons">
         <button class="start">Start Tour</button>
