Modify initial volume button to be in html

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,13 @@
         <button class="previous">Previous Move</button>
         <button class="next">Next Move</button>
       </div>
-      <div class="volume"></div>
+      <div class="volume">
+        <img
+          src="<%=require('./images/volume-off.svg')%>"
+          alt="Volume Off"
+          class="volume-off"
+        />
+      </div>
     </div>
     <div class="board">
       <div class="board-row">
