Add dialog when tour finishes

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,9 @@
       </div>
     </div>
     <div class="board">
+      <dialog class="tour-end">
+        <h1>Tour Finished!</h1>
+      </dialog>
       <div class="board-row">
         <div class="square" pos="00"></div>
         <div class="square black" pos="01"></div>
