Remove focus on tour-end dialog

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="board">
-      <dialog class="tour-end" tabindex="-1">
+      <dialog class="tour-end">
         <h1>Tour Finished!</h1>
       </dialog>
       <div class="board-row">
