Implement disabled state for buttons

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@
       </div>
       <div class="buttons">
         <button class="start">Start Tour</button>
-        <button class="restart">Restart Tour</button>
-        <button class="pause">Pause Tour</button>
+        <button class="restart" disabled>Restart Tour</button>
+        <button class="pause" disabled>Pause Tour</button>
         <button class="random">Place knight randomly</button>
-        <button class="previous">Previous Move</button>
+        <button class="previous" disabled>Previous Move</button>
         <button class="next">Next Move</button>
       </div>
       <div class="volume">
