Add width and height for volume img

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
           src="<%=require('./images/volume-off.svg')%>"
           alt="Volume Off"
           class="volume-off"
+          style="width: 5vw; aspect-ratio: 1"
         />
       </div>
     </div>
