--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <body>
     <div class="user">
       <h1 class="title">Knight's Tour</h1>
+      <h3 class="description">
+        The knight's tour involves moving the knight on a chessboard such that
+        the knight visits every square exactly once.
+      </h3>
       <h2>Click on a square on the board to place a knight!</h2>
       <div class="delay-wrapper">
         <label for="delay"
