Set default volume to on

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       </div>
       <div class="volume">
         <img
-          src="<%=require('./images/volume-off.svg')%>"
-          alt="Volume Off"
-          class="volume-off"
+          src="<%=require('./images/volume-on.svg')%>"
+          alt="Volume On"
+          class="volume-on"
           style="width: 5vw; aspect-ratio: 1"
         />
       </div>
